--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/6e16941513.js"
       crossorigin="anonymous"
     ></script>
+    <script defer type="module" src="./main.js"></script>
   </head>
   <body>
     <!-- Button to start Quiz -->
@@ -111,7 +112,5 @@
         <button class="quit">Quit</button>
       </div>
     </div>
-
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
